--- a/intranet/htdocs/intranet-tmpl/busquedas/filtrado.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/filtrado.tmpl
@@ -193,7 +193,7 @@ function limpiarCampos(side){
     </fieldset>
 </fieldset> <!-- countournDiv -->
 
-<div id="resultBusqueda"></div>
+<div id="resultBusqueda" class="resultBusqueda"></div>
 
 <div style="text-align: center; cursor:pointer;">
     <span id="volver">Volver</span>
