fixes en datos usuario

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -115,6 +115,10 @@
                     </center>
                     </li>
                     [% END %]
+                    <li>[% "Instituci&oacute;n :" | i18n %] <strong> [% socio.persona.getInstitucion %]</strong></li>
+                    <li>[% "Carrera :" | i18n %] <strong> [%  socio.persona.getCarrera %]</strong></li>
+                    <li>[% "A&ntilde;o :" | i18n %] <strong> [%  socio.persona.getAnio %]</strong></li>
+                    <li>[% "Divisi&oacute;n :" | i18n %] <strong> [%  socio.persona.getDivision %]</strong></li>
                 </ul>
             </div>
         </fieldset>
