--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -231,7 +231,9 @@ div.pagination span.disabled {
     text-align:center;
 }
 
-
+.novedad_opac:hover{
+    background: #EFEFEF;    
+}
 
 #mensajes{
   position: relative;
