--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -235,6 +235,10 @@ div.pagination span.disabled {
     background: #EFEFEF;    
 }
 
+.del{
+    float:right; font-weight:bold; color:#666666
+}
+
 #mensajes{
   position: relative;
   background:#ffc;
