--- a/opac/htdocs/opac-tmpl/opac-novedades_result.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-novedades_result.tmpl
@@ -1,4 +1,4 @@
-[% IF !novedades %]
+[% IF !cantidad %]
       <!--<span class="highlighted">[% 'Sin novedades' | i18n %].</span>-->
       <h1>[% 'Sin novedades' | i18n %]</h1>
 [% END %]
