--- a/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
@@ -18,7 +18,7 @@
 
 
     function consultarPorBarcode(){
-
+    
         //se busca por barcode
         if ( ($("#barcode").val() == "")&&(($("#desde_barcode").val() == "")||($("#hasta_barcode").val() == "")) ){
             jAlert(DEBE_INGRESAR_EL_BARCODE);
@@ -48,12 +48,16 @@
         objAH.hasta_barcode     = $("#hasta_barcode").val();
         objAH.accion            = "CONSULTA_POR_BARCODE";
         objAH.funcion           = "changePage";
-        objAH.id_ui             = $("#combo_ui_barcode").val();
+        objAH.id_ui            = $("#combo_ui_barcode").val();
+        objAH.tipoUI            = $("input[@name='uibarcode']:checked").val();
         //se envia la consulta
         objAH.sendToServer();
+        $('#result').show();
+        $('#reporteCreado').hide();
     }
     
     function consultarPorSignatura(){
+     
 
         //se busca por signatura
         if ( ($("#sigtop").val() == "")&&(($("#desde_signatura").val() == "")||($("#hasta_signatura").val() == "")) ){
@@ -82,8 +86,11 @@
         objAH.accion            = "CONSULTA_POR_SIGNATURA";
         objAH.funcion           = "changePage";
         objAH.id_ui             = $("#combo_ui_signatura").val();
+        objAH.tipoUI            = $("input[@name='uisignatura']:checked").val();
 	    //se envia la consulta
 	    objAH.sendToServer();
+        $('#result').show();
+        $('#reporteCreado').hide();
       }
     
      function exportarXLS(){
@@ -99,9 +106,14 @@
         objAH.hasta_barcode     = $("#hasta_barcode").val();
         objAH.accion            = "EXPORTAR_XLS";
         objAH.funcion           = "changePage";
-        objAH.id_ui             = $("#combo_ui_signatura").val();
+        objAH.id_uisignatura    = $("#combo_ui_signatura").val();
+        objAH.id_uibarcode      = $("#combo_ui_barcode").val();
+        objAH.tipoUISignatura   = $("input[@name='uisignatura']:checked").val();
+        objAH.tipoUIBarcode     = $("input[@name='uibarcode']:checked").val();
         //se envia la consulta
         objAH.sendToServer();
+        $('#result').hide();
+        $('#reporteCreado').show();
     }
     
 
@@ -117,16 +129,25 @@
         $('#barcode').click(function() {
             $('#desde_barcode').val('');
             $('#hasta_barcode').val('');
+            $('#sigtop').val('');
+            $('#hasta_signatura').val('');
+            $('#desde_signatura').val('');
         });
     }
 
     function onClickDesdeHastaBarcode(){
         $('#desde_barcode').click(function() {
             $('#barcode').val('');
+            $('#sigtop').val('');
+            $('#hasta_signatura').val('');
+            $('#desde_signatura').val('');
         });
 
         $('#hasta_barcode').click(function() {
             $('#barcode').val('');
+            $('#sigtop').val('');
+            $('#hasta_signatura').val('');
+            $('#desde_signatura').val('');
         });
     }
 
@@ -134,16 +155,25 @@
         $('#sigtop').click(function() {
             $('#desde_signatura').val('');
             $('#hasta_signatura').val('');
+            $('#barcode').val('');
+            $('#hasta_barcode').val('');
+            $('#desde_barcode').val('');
         });
     }
 
     function onClickDesdeHastaSignatura(){
         $('#desde_signatura').click(function() {
             $('#sigtop').val('');
+            $('#barcode').val('');
+            $('#hasta_barcode').val('');
+            $('#desde_barcode').val('');
         });
 
         $('#hasta_signatura').click(function() {
             $('#sigtop').val('');
+            $('#barcode').val('');
+            $('#hasta_barcode').val('');
+            $('#desde_barcode').val('');
         });
     }
 
@@ -159,6 +189,7 @@
         onClickSignatura();
         onClickDesdeHastaBarcode();
         onClickDesdeHastaSignatura();
+        $('#reporteCreado').hide();
     });
 
 </script>
@@ -186,9 +217,13 @@
               <input type="text" id="hasta_signatura" value="[% hasta_signatura %]"> Max: [% signatura_max %] 
             </li>
             <li class="sub_item">
-              <label for="ui">[% "Unidad de Informaci&oacute;n" | i18n %]</label>
-              [% combo_ui_signatura %]
+                <label for="radio">[% "Unidad de Informacion" | i18n %]</label>
+                <input type="radio" name="uisignatura" value="Origen" checked>Origen
+                <input type="radio" name="uisignatura" value="Poseedora" >Poseedora<br>
+                <label for="ui"></label>
+                  [% combo_ui_signatura %]      
             </li>
+        
 
             [% PERL %]
                             print C4::AR::Filtros::to_Button( 
@@ -215,10 +250,14 @@
               <label for="hasta_barcode">[% "Hasta" | i18n %]</label>
               <input type="text" id="hasta_barcode" value="[% hasta_barcode %]"> Max: [% barcode_max %] 
             </li>
-            <li class="sub_item">
-              <label for="ui">[% "Unidad de Informaci&oacute;n" | i18n %]</label>
-              [% combo_ui_barcode %]
+         <li class="sub_item">
+                <label for="radio">[% "Unidad de Informacion" | i18n %]</label>
+                <input type="radio" name="uibarcode" value="Origen" checked>Origen
+                <input type="radio" name="uibarcode" value="Poseedora" >Poseedora<br>
+                <label for="ui"></label>
+                  [% combo_ui_barcode %]      
             </li>
+         
 
             [% PERL %]
                             print C4::AR::Filtros::to_Button( 
@@ -231,7 +270,9 @@
 </fieldset>
 
 <br>
-
+<div id="reporteCreado" style="border: 1px solid #7E94AF; text-align:center; background-color: #CCCCCC; color:#505050; padding:10px 0 0 0; margin: 0 0 10px 0">
+         <p> [% 'El reporte ha sido exportado correctamente en' | i18n %]</p> [% filename %] 
+</div>
 <div id="result"></div>
 </fieldset>
 
