--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -1182,6 +1182,7 @@ li {
 
 .horizontal {
     margin: 0 auto;
+    float: left;
 }
 
 .horizontal_final {
@@ -2624,7 +2625,8 @@ ul.stream-tabs li.open, ul.stream-tabs li.open:hover, ul.stream-tabs li.open .ta
 body {
     font: 13px/1.5 Helvetica Neue,Arial,Helvetica,'Liberation Sans',FreeSans,sans-serif;
 }
-a {
+
+a{
     color: #2D76B9;
     text-decoration: none;
 }
