--- a/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
@@ -253,6 +253,7 @@ function onCompleteUsuarios(){
 
     detallePrestamos(NRO_SOCIO_AUTH, updateInfoPrestamos);
     detalleSanciones(NRO_SOCIO_AUTH);
+    startOverlay();
 }
 
 // FIXME croe q no lo vamos a usar mas, el resultado del autocomplete trae la info del usuario y si es REGULAR o NO
