--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/forms.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/forms.css
@@ -25,6 +25,10 @@
 
  textarea:focus,  input:focus {
 	border: 2px solid #4B5869;
+	background: white;
+	font-family: verdana;
+	font-weight: bold;
+	color: #35414F;
 }
 
 .ayuda_marc{    
