--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/login_screen.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/login_screen.css
@@ -107,8 +107,8 @@ fieldset {
 #login {
 	background-image: url(../imagenes/meranLogin.png);
 	background-repeat: no-repeat;
-	height: 220px;
-	width: 420px;
+	height: 300px;
+	width: 500px;
 	margin: 0 auto;
 }
 
@@ -119,7 +119,7 @@ fieldset {
 
 #login input {
 	float: right;
-	width: 57%;
+	width: 65%;
 	margin-top: 4px;
 }
 
@@ -141,24 +141,23 @@ fieldset {
 	margin: 0 auto;
 	float: left;
 	padding-left: 5%;
-	width: 20em;
+	width: 25em;
 }
 
 #contenido_login {
 	display: block;
 	width: 80%;
-	padding-top: 86px;
+	padding-top: 120px;
 	padding-left: 50px;
 	position: relative;
 	margin: 0 auto;
-	float: left;
 }
 
 #boton_login {
 	display: block;
 	list-style-type: none;
-	padding-left: 70px;
-	width: 75px;
+	float: right;
+	margin-right: 46px;
 }
 
 #boton_login ul {
@@ -662,8 +661,8 @@ li {
 	background: transparent url(../imagenes/botones/boton_entrar.png)
 		no-repeat;
 	height: 21px;
-	width: 20px;
-	float: left;
+	width: 100%;
+	margin: 0 auto;
 }
 
 .boton_enviar {
