Nuevo envio de mails HTML #2452

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
@@ -36,7 +36,7 @@
 	                            <label for="email">
 	                                <strong>[% "E-mail" | i18n %]</strong>
 	                            </label>
-	                            <input type="text" name="email" id="email" value="[% socio_data.usr_email %]" />
+	                            <input type="text" name="email" id="email" value="[% socio_data.usr_email %]" style="width:300px;"/>
 	                        </li>
 		                </ul>
 		                <input type="hidden" name="token" value="[% token %]" />
