--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -4548,3 +4548,10 @@ font-size:10pt;
 .resultBusqueda{
 	min-width: 900px;
 }
+
+
+/* Estilo mensaje de contacto (mainpage) */
+
+/*.msj_main{
+    color:#819FF7;
+}*/
