--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -54,23 +54,31 @@
 
 [% IF cant_noleidos > 0 %]
     <fieldset class="mensajes">
-        <legend class="titulo_legend"><strong>[% "Mensajes de Contacto :" | i18n %]</strong></legend>
-        <ul>
-            <li class="item"> 
-                        [FOREACH mens IN ultimos_no_leidos ]
-                            [% mens %]
-                        [% END %]
-                        [% PERL %]
-                        print C4::AR::Filtros::link_to( 
-                              text =>     "[% 'Ver Mensajes' | i18n %]",
-                              url=>"[% url_prefix %]/admin/mensajes_contacto.pl", 
-                              title =>    "[% 'Mensajes' | i18n %]"
-                              );
-                        [% END %]
+        <legend class="titulo_legend"><strong>[% "Mensajes de Contacto :" | i18n %]</strong></legend>    
+           
+               
+                  <ul>
+                      [% FOREACH mens IN ultimos_no_leidos %]
+                          <li  class="msj_main"> 
+                                <span class="msj_main_nombre">[% mens.nombre %] [% mens.apellido %]</span>
+                                <span class="msj_main_mail">([% mens.email %])</span>
+                                <span class="msj_main_asunto">[% mens.asunto %]</span>
+                          </li>
+                      [% END %]
+                  </ul>
+          
+                  <ul>
+                      <li class="item"> 
+                                  [% PERL %]
+                                  print C4::AR::Filtros::link_to( 
+                                        text =>     "[% 'Ver Mensajes' | i18n %]",
+                                        url=>"[% url_prefix %]/admin/mensajes_contacto.pl", 
+                                        title =>    "[% 'Mensajes' | i18n %]"
+                                        );
+                                  [% END %]           
                         
-              
-            </li>
-        </ul>
+                      </li>
+                  </ul>
     </fieldset>
 [% END %]
 [% INCLUDE 'intranet-bottom.inc' %]
