--- a/intranet/htdocs/intranet-tmpl/changepassword.tmpl
+++ b/intranet/htdocs/intranet-tmpl/changepassword.tmpl
@@ -20,6 +20,7 @@ function guardarCambiarPassword(){
     document.datosAEnviar.usuario.value = usuario.ID;
     document.datosAEnviar.changePassword.value = 1;
     document.datosAEnviar.submit();
+    startOverlay();
 }
 
 function updateGuardarCambiarPassword(responseText){
