--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -19,7 +19,7 @@
         
 	        var uploader = new qq.FileUploader({
 	            element: document.getElementById('file-uploader'),
-	            action: i'[% url_prefix %]/usuarios/reales/uploadPicture.pl',
+	            action: '[% url_prefix %]/usuarios/reales/uploadPicture.pl',
 	            params: {
 	            	nro_socio: '[% socio_data.usr_nro_socio %]',
 	            },
