--- a/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
+++ b/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
@@ -47,7 +47,7 @@
 			        <div class="sitemessage"> 
 			          <h1>&bull; Facultad de Ciencias Económicas</h1> 
 			          <h2>6 entre  47 y 48. 1° subsuelo 2</h2> 
-			          <h3><a href="http://[% SERVER_ADDRESS %]/[% url_prefix %]/opac-ui_info.pl">&rsaquo;&rsaquo;&nbsp;M&aacute;s Informaci&oacute;n De La Unidad</a></h3> 
+			          <h3><a href="http://[% SERVER_ADDRESS %]/[% url_prefix %]/opac-ui_info.pl">&rsaquo;&rsaquo;&nbsp;[% 'M&aacute;s Informaci&oacute;n De La Unidad' | i18n %]'</a></h3> 
 			        </div> 
 			      </div> 
 			      <!-- A.3 HEADER BOTTOM --> 
